#############################################
# Set up configration
#############################################
[metadata]
name = repositioning_comparison
version = attr: src.repositioning_comparison.version.VERSION
description = This package get to master thesis of Lingling Xu
long_description = file: README.rst

url = https://github.com/lingling93/comparison

license = MIT
license_file = LICENSE

author=Lingling Xu
author_email = linglingxu993@gmail.com

classifiers =
    Lisence :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
keywords =
    lingling
    thesis
    NRL

[options]

# where is my code
packages = find:
package_dir =
    = src
zip_safe = false
python_requires = >=3.6

install_requires =
    click
    node2vec
    pandas
    networkx
    scikit-learn
    paramiko
    simplejson
    joblib
    hetio==0.2.1
    glmnet
    dataclasses


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    repositioning-comparison = repositioning_comparison.cli:main
