#############################################
# Set up configration
#############################################
[metadata]
name = drugrelink
version = attr: src.drugrelink.version.VERSION
description = This package get to master thesis of Lingling Xu
long_description = file: README.rst

url = https://github.com/drugrelink

license = MIT
license_file = LICENSE

author = Lingling Xu
author_email = linglingxu993@gmail.com

classifiers =
    Lisence :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
keywords =
    lingling
    thesis
    NRL

[options]

# where is my code
packages = find:
package_dir =
    = src
zip_safe = false
python_requires  >=3.6

install_requires =
    click
    node2vec
    pandas
    networkx
    scikit-learn <= 0.20.4
    paramiko
    simplejson
    joblib
    hetio==0.2.1
    glmnet
    dataclasses
    edge2vec @ git+https://github.com/drugrelink/edge2vec.git



[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    drugrelink = drugrelink.cli:main
    drugrelink-repurpose = drugrelink.default_predictor:main
