#############################################
# Set up configration
#############################################
[metadata]
name = drugrelink
version = attr: src.drugrelink.version.VERSION
description = A package for generating knowledge graph embeddings of Hetionet and drug repositioning
long_description = file: README.rst

url = https://github.com/drugrelink/drugrelink
download_url = https://github.com/drugrelink/drugrelink/releases
project_urls =
    Bug Tracker = https://github.com/drugrelink/drugrelink/issues
    Source Code = https://github.com/drugrelink/drugrelink

author = Lingling Xu
author_email = linglingxu993@gmail.com
maintainer = Charles Tapley Hoyt
maintainer_email = cthoyt@gmail.com

license = MIT
license_file = LICENSE

classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
keywords =
    Drug Repositioning
    Knowledge Graph
    Knowledge Graph embeddings
    Network Representation Learning
    NRL
    Hetionet

[options]
install_requires =
    click
    node2vec
    pandas
    networkx
    scikit-learn <= 0.20.4
    paramiko
    simplejson
    joblib
    hetio==0.2.1
    glmnet
    dataclasses
    edge2vec @ git+https://github.com/drugrelink/edge2vec.git

# where is my code
packages = find:
package_dir =
    = src
zip_safe = false
python_requires  >=3.6

[options.packages.find]
where = src

[options.extras_require]
web =
    flask
    flask-bootstrap
    flask-wtf
    jsonschema<3.0.0
    flasgger
    gunicorn
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    drugrelink = drugrelink.cli:main
    drugrelink-repurpose = drugrelink.default_predictor:main
