#############################################
# Set up configration
#############################################
[metadata]
name =ComparisonNRL
version = 0.0.4-dev
description = This package get to master thesis of Lingling Xu
long_description = file: README.rst

url = www.lingling93.com

license =MIT Lisense
author=Lingling Xu
author_email = linglingxu993@gmail.com
classifiers =
    Lisence :: OSI Approved :: MIT Lisence
    Programming Language :: Python
    Programming Language :: Python :: 3.7

keywords =
    lingling
    thesis
    NRL

[options]

# where is my code
packages = find:
package_dir =
    = src
zip_safe = false
python_requires = >=3.6

install_requires =
    click
    node2vec
    pandas
    networkx
    scikit-learn
    paramiko


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ComparisonNRL = ComparisonNRL.cli:main
